Added pagination & filtration for endpoints
