# modules/admin/controllers/CourseController.php
@@ -2,6 +2,7 @@
 
 namespace app\modules\admin\controllers;
 
+use domain\common\responses\PaginatedResponse;
 use domain\course\getAll\Formatter;
 use models\search\CourseFiltrator;
 use OpenApi\Annotations as OA;
@@ -23,10 +24,12 @@ class CourseController extends BaseModuleController
     /**
      * @OA\Get(
      *     path="/admin/course/get-all",
-     *     @OA\Response(response="200", description="Список курсов и семестров")
+     *     @OA\Response(response="200", description="Список курсов и семестров"),
+     *     @OA\Parameter(name="page", in="query"),
+     *     @OA\Parameter(name="per-page", in="query")
      * )
      */
-    public function actionGetAll(): array
+    public function actionGetAll(): PaginatedResponse
     {
         $raw = $this->filtrator->search();
 
