# modules/admin/controllers/TeacherPreferenceController.php
@@ -2,6 +2,7 @@
 
 namespace app\modules\admin\controllers;
 
+use domain\common\responses\PaginatedResponse;
 use domain\teacherPreference\writeAll\Action as WriteAllAction;
 use domain\teacherPreference\writeAll\Dto;
 use factories\RequestFactory;
@@ -29,10 +30,12 @@ class TeacherPreferenceController extends BaseModuleController
     /**
      * @OA\Get(
      *     path="/admin/teacher-preference/get-all",
-     *     @OA\Response(response="200", description="Список предпочтений преподавателей")
+     *     @OA\Response(response="200", description="Список предпочтений преподавателей"),
+     *     @OA\Parameter(name="page", in="query"),
+     *     @OA\Parameter(name="per-page", in="query")
      * )
      */
-    public function actionGetAll(): array
+    public function actionGetAll(): PaginatedResponse
     {
         $raw = $this->filtrator->search();
 
